tests/snapshots/snapshots__budget_neverthrow_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4041 tokens)

CHANGELOG.md
     1→# neverthrow

README.md
     1→# NeverThrow 🙅
     5→## Description
     7→Encode failure into your program.
     8→
      →…
    19→## Table Of Contents
    21→* [Installation](#installation)
    22→* [Recommended: Use `eslint-plugin-neverthrow`](#recommended-use-eslint-plugin-neverthrow)
      →…
    73→## Installation
    75→```sh
    76→> npm install neverthrow
      →…
    79→## Recommended: Use `eslint-plugin-neverthrow`
    81→As part of `neverthrow`s [bounty program](https://github.com/supermacro/neverthrow/issues/314), user [mdbetancourt](https://github.com/mdbetancourt) created [`eslint-plugin-neverthrow`](https://github.com/mdbetancourt/eslint-plugin-neverthrow) to ensure that errors are not gone unhandled.
    82→
      →…
   100→## Top-Level API
   102→`neverthrow` exposes the following:
   103→
      →…
   139→## API Documentation
   141→### Synchronous API (`Result`)
   863→### Asynchronous API (`ResultAsync`)
  1519→### Utilities
  1633→### Testing
  1635→`Result` instances have two unsafe methods, aptly called `_unsafeUnwrap` and `_unsafeUnwrapErr` which **should only be used in a test environment**.
  1636→
  1637→`_unsafeUnwrap` takes a `Result<T, E>` and returns a `T` when the result is an `Ok`, otherwise it throws a custom object.
  1638→
  1639→`_unsafeUnwrapErr` takes a `Result<T, E>` and returns a `E` when the result is an `Err`, otherwise it throws a custom object.
  1640→
  1641→That way you can do something like:
  1642→
  1643→```typescript
  1644→expect(myResult._unsafeUnwrap()).toBe(someExpectation)
  1645→```
  1646→
  1647→However, do note that `Result` instances are comparable. So you don't necessarily need to unwrap them in order to assert expectations in your tests. So you could also do something like this:
  1648→
  1649→```typescript
  1650→import { ok } from 'neverthrow'
  1651→
  1652→// ...
  1653→
      →…
  1673→## A note on the Package Name
  1675→Although the package is called `neverthrow`, please don't take this literally. I am simply encouraging the developer to think a bit more about the ergonomics and usage of whatever software they are writing.
  1676→
      →…
  1681→### License
  1683→The neverthrow project is available as open source under the terms of the [MIT license](https://github.com/supermacro/neverthrow/blob/master/LICENSE).

package.json
     2→  "name": "neverthrow",
     3→  "version": "8.2.0",
     4→  "description": "Stop throwing errors, and instead return Results!",
     5→  "main": "dist/index.cjs.js",
     6→  "module": "dist/index.es.js",
     7→  "types": "dist/index.d.ts",
     8→  "files": [
    10→  ],
    11→  "scripts": {
    23→  },
    24→  "repository": {
    27→  },
    28→  "author": "Giorgio Delgado",
    29→  "license": "MIT",
    30→  "bugs": {
    32→  },
    33→  "homepage": "https://github.com/supermacro/neverthrow#readme",
    34→  "devDependencies": {
    52→  },
    53→  "keywords": [
    58→  ],
    59→  "engines": {
    62→  },
    63→  "optionalDependencies": {
    65→  }
    66→}

rollup.config.mjs
     1→import typescript from "rollup-plugin-typescript2";
     2→import dts from "rollup-plugin-dts";

src/_internals/error.ts
     1→import { Result } from '../result'
     3→export interface ErrorConfig {
     4→  withStackTrace: boolean
     5→}
     7→const defaultErrorConfig: ErrorConfig = {
     8→  withStackTrace: false,
     9→}
    11→interface NeverThrowError<T, E> {
    12→  data:
    13→    | {
    14→        type: string
    15→        value: T
    16→      }
    17→    | {
    18→        type: string
    19→        value: E
    20→      }
    21→  message: string
    22→  stack: string | undefined
    23→}
    27→export const createNeverThrowError = <T, E>(
    28→  message: string,
    29→  result: Result<T, E>,
    30→  config: ErrorConfig = defaultErrorConfig,
    31→): NeverThrowError<T, E> => {
    32→  const data = result.isOk()
    33→    ? { type: 'Ok', value: result.value }
    34→    : { type: 'Err', value: result.error }
    35→
    36→  const maybeStack = config.withStackTrace ? new Error().stack : undefined
    37→
    38→  return {
    39→    data,
    40→    message,
    41→    stack: maybeStack,
    42→  }
    43→}

src/_internals/utils.ts
     1→import { Result, ok, err } from '../result'
     2→import { ResultAsync } from '../result-async'
     5→export type ExtractOkTypes<T extends readonly Result<unknown, unknown>[]> = {
    10→export type ExtractOkAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    15→export type ExtractErrTypes<T extends readonly Result<unknown, unknown>[]> = {
    20→export type ExtractErrAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    24→export type InferOkTypes<R> = R extends Result<infer T, unknown> ? T : never
    25→export type InferErrTypes<R> = R extends Result<unknown, infer E> ? E : never
    27→export type InferAsyncOkTypes<R> = R extends ResultAsync<infer T, unknown> ? T : never
    28→export type InferAsyncErrTypes<R> = R extends ResultAsync<unknown, infer E> ? E : never
    30→/**
    31→ * Short circuits on the FIRST Err value that we find
    32→ */
    33→export const combineResultList = <T, E>(
    34→  resultList: readonly Result<T, E>[],
    35→): Result<readonly T[], E> => {
    36→  let acc = ok([]) as Result<T[], E>
    37→
    38→  for (const result of resultList) {
    39→    if (result.isErr()) {
    40→      acc = err(result.error)
    41→      break
    42→    } else {
    43→      acc.map((list) => list.push(result.value))
    44→    }
    45→  }
    46→  return acc
    47→}
    54→export const combineResultAsyncList = <T, E>(
    55→  asyncResultList: readonly ResultAsync<T, E>[],
    56→): ResultAsync<readonly T[], E> =>
    57→  ResultAsync.fromSafePromise(Promise.all(asyncResultList)).andThen(
    58→    combineResultList,
    59→  ) as ResultAsync<T[], E>
    61→/**
    62→ * Give a list of all the errors we find
    63→ */
    64→export const combineResultListWithAllErrors = <T, E>(
    65→  resultList: readonly Result<T, E>[],
    66→): Result<readonly T[], E[]> => {
    67→  let acc = ok([]) as Result<T[], E[]>
    68→
    69→  for (const result of resultList) {
    70→    if (result.isErr() && acc.isErr()) {
    71→      acc.error.push(result.error)
    72→    } else if (result.isErr() && acc.isOk()) {
    73→      acc = err([result.error])
    74→    } else if (result.isOk() && acc.isOk()) {
    75→      acc.value.push(result.value)
    76→    }
    77→    // do nothing when result.isOk() && acc.isErr()
    78→  }
    79→  return acc
    80→}
    82→export const combineResultAsyncListWithAllErrors = <T, E>(
    83→  asyncResultList: readonly ResultAsync<T, E>[],
    84→): ResultAsync<readonly T[], E[]> =>
    85→  ResultAsync.fromSafePromise(Promise.all(asyncResultList)).andThen(
    86→    combineResultListWithAllErrors,
    87→  ) as ResultAsync<T[], E[]>

src/result-async.ts
     1→./result …
    10→import { Err, Ok, Result } from './ …
    11→./_internals/utils …
    22→export class ResultAsync<T, E> implements PromiseLike<Result<T, E>> {
    23→  private _promise: Promise<Result<T, E>>
    24→
    25→  constructor …
    30→  static fromSafePromise …
    37→  static fromPromise …
    46→  static fromThrowable …
    69→  static combine …
    81→  static combineWithAllErrors …
    89→  map …
   101→  andThrough …
   117→  andTee …
   133→  orTee …
   149→  mapErr …
   169→  andThen …
   190→  orElse …
   202→  match …
   206→  unwrapOr …
   210→  /**
      →…
   222→  async *safeUnwrap(): AsyncGenerator<Err<never, E>, T> {
   227→  then …
   249→export function okAsync …
   255→export function errAsync …
   259→export const fromPromise …
   260→export const fromSafePromise …
   262→export const fromAsyncThrowable …
   265→export type CombineResultAsyncs …
   272→export type CombineResultsWithAllErrorsArrayAsync …
   279→type UnwrapAsync …
   300→type TraverseAsync …
   330→type TraverseWithAllErrorsAsync …
   338→type Writable …

src/result.ts
     1→import { errAsync, ResultAsync } from './ …
     2→import { createNeverThrowError, ErrorConfig } from './_internals/error …
     3→./_internals/utils …
    14→export namespace Result {
    15→  /**
    16→   * Wraps a function with a try catch, creating a new function with the same
    17→   * arguments but returning `Ok` if successful, `Err` if the function throws
    18→   *
    19→   * @param fn function to wrap with ok on success or err on failure
    20→   * @param errorFn when an error is thrown, this will wrap the error result if provided
    21→   */
    22→  // eslint-disable-next-line @typescript-eslint/no-explicit-any
    23→  export function fromThrowable …
    43→  export function combine …
    55→  export function combineWithAllErrors …
    62→export type Result …
    66→export function ok …
    73→export function err …
   122→export function safeTry …
   134→interface IResult<T, E> {
   135→  /**
      →…
   140→  isOk(): this is Ok<T, E>
   142→  /**
      →…
   147→  isErr(): this is Err<T, E>
   149→  /**
      →…
   157→  map<A>(f: (t: T) => A): Result<A, E>
   159→  /**
      →…
   168→  mapErr<U>(f: (e: E) => U): Result<T, U>
   183→  andThen …
   185→  /**
      →…
   195→  andTee(f: (t: T) => unknown): Result<T, E>
   197→  /**
      →…
   207→  orTee(f: (t: E) => unknown): Result<T, E>
   219→  andThrough …
   233→  orElse …
   235→  /**
      →…
   244→  asyncAndThen<U, F>(f: (t: T) => ResultAsync<U, F>): ResultAsync<U, E | F>
   246→  /**
      →…
   253→  asyncMap<U>(f: (t: T) => Promise<U>): ResultAsync<U, E>
   255→  /**
      →…
   260→  unwrapOr<A>(v: A): T | A
   262→  /**
      →…
   276→  match<A, B = A>(ok: (t: T) => A, err: (e: E) => B): A | B
   278→  /**
      →…
   290→  safeUnwrap(): Generator<Err<never, E>, T>
   292→  /**
      →…
   299→  _unsafeUnwrap(config?: ErrorConfig): T
   301→  /**
      →…
   309→  _unsafeUnwrapErr(config?: ErrorConfig): E
   312→export class Ok<T, E> implements IResult<T, E> {
   313→  constructor …
   315→  isOk …
   319→  isErr …
   323→  map …
   328→  mapErr …
   337→  andThen …
   344→  andThrough …
   348→  andTee …
   357→  orTee …
   366→  orElse …
   370→  asyncAndThen …
   379→  asyncAndThrough …
   383→  asyncMap …
   388→  unwrapOr …
   393→  match …
   397→  safeUnwrap …
   405→  _unsafeUnwrap(_?: ErrorConfig): T {
   406→    return this.value
   407→  }
   409→  _unsafeUnwrapErr(config?: ErrorConfig): E {
   410→    throw createNeverThrowError('Called `_unsafeUnwrapErr` on an Ok', this, config)
   411→  }
   419→export class Err<T, E> implements IResult<T, E> {
   420→  constructor …
   422→  isOk …
   426→  isErr …
   431→  map …
   435→  mapErr …
   439→  andThrough …
   443→  andTee …
   447→  orTee …
   461→  andThen …
   470→  orElse …
   475→  asyncAndThen …
   479→  asyncAndThrough …
   484→  asyncMap …
   488→  unwrapOr …
   492→  match …
   496→  safeUnwrap …
   505→  _unsafeUnwrap(config?: ErrorConfig): T {
   506→    throw createNeverThrowError('Called `_unsafeUnwrap` on an Err', this, config)
   507→  }
   509→  _unsafeUnwrapErr(_?: ErrorConfig): E {
   510→    return this.error
   511→  }
   523→export const fromThrowable …
   530→type Prev …
   590→type CollectResults …
   614→export type Transpose …
   635→export type Combine …
   645→export type Dedup …
   652→export type MemberListOf …
   669→export type EmptyArrayToNever …
   680→type UnknownMembersToNever …
   685→export type MembersToUnion …
   688→export type IsLiteralArray …
   698→type Traverse …
   704→type TraverseWithAllErrors …
   712→export type CombineResults …
   719→export type CombineResultsWithAllErrorsArray …

tests/index.test.ts
     3→../src …

tests/safe-try.test.ts
     1→../src …

tests/tsconfig.tests.json
     2→  "compilerOptions": {
    22→  },
    23→  "include": [
    26→  ]
    27→}

tests/typecheck-tests.ts
     7→../src …
    16→import { safeTry, Transpose } from '../src/result …
    19→type CreateTuple …
  2607→const input = <T>(): T => 123 as any

tsconfig.json
     2→  "compilerOptions": {
    23→  },
    24→  "include": [
    26→  ],
    27→  "exclude": [
    30→  ]
    31→}
