tests/snapshots/snapshots__budget_neverthrow_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 → level 1 (458 words)

CHANGELOG.md
     1→# neverthrow
     3→## 8.2.0
     5→### Minor Changes
    11→## 8.1.1
    13→### Patch Changes
    17→## 8.1.0
    19→### Minor Changes
    23→## 8.0.0
    25→### Major Changes
    43→## 7.2.0
    45→### Minor Changes
    49→## 7.1.0
    51→### Minor Changes
    56→### Patch Changes
    62→## 7.0.1
    64→### Patch Changes
    70→## 7.0.0
    72→### Major Changes
README.md
     1→# NeverThrow 🙅
     5→## Description
    19→## Table Of Contents
    73→## Installation
    79→## Recommended: Use `eslint-plugin-neverthrow`
   100→## Top-Level API
   139→## API Documentation
   141→### Synchronous API (`Result`)
   143→#### `ok`
   168→#### `err`
   193→#### `Result.isOk` (method)
   207→#### `Result.isErr` (method)
   221→#### `Result.map` (method)
   259→#### `Result.mapErr` (method)
   297→#### `Result.unwrapOr` (method)
   323→#### `Result.andThen` (method)
   384→#### `Result.asyncAndThen` (method)
   404→#### `Result.orElse` (method)
   445→#### `Result.match` (method)
   514→#### `Result.asyncMap` (method)
   551→#### `Result.andTee` (method)
   598→#### `Result.orTee` (method)
   645→#### `Result.andThrough` (method)
   692→#### `Result.asyncAndThrough` (method)
   728→#### `Result.fromThrowable` (static class method)
   761→#### `Result.combine` (static class method)
   814→#### `Result.combineWithAllErrors` (static class method)
   852→#### `Result.safeUnwrap()`
   863→### Asynchronous API (`ResultAsync`)
   865→#### `okAsync`
   892→#### `errAsync`
   919→#### `ResultAsync.fromThrowable` (static class method)
   960→#### `ResultAsync.fromPromise` (static class method)
   996→#### `ResultAsync.fromSafePromise` (static class method)
  1041→#### `ResultAsync.map` (method)
  1087→#### `ResultAsync.mapErr` (method)
  1142→#### `ResultAsync.unwrapOr` (method)
  1166→#### `ResultAsync.andThen` (method)
  1223→#### `ResultAsync.orElse` (method)
  1241→#### `ResultAsync.match` (method)
  1283→#### `ResultAsync.andTee` (method)
  1330→#### `ResultAsync.orTee` (method)
  1377→#### `ResultAsync.andThrough` (method)
  1425→#### `ResultAsync.combine` (static class method)
  1475→#### `ResultAsync.combineWithAllErrors` (static class method)
  1509→#### `ResultAsync.safeUnwrap()`
  1519→### Utilities
  1521→#### `fromThrowable`
  1528→#### `fromAsyncThrowable`
  1535→#### `fromPromise`
  1542→#### `fromSafePromise`
  1549→#### `safeTry`
  1633→### Testing
  1673→## A note on the Package Name
  1681→### License
jest.config.js
rollup.config.mjs
src/_internals/error.ts
src/_internals/utils.ts
src/index.ts
src/result-async.ts
    22→export class ResultAsync
    25→  constructor
    30→  static fromSafePromise
    37→  static fromPromise
    46→  static fromThrowable
    69→  static combine
    81→  static combineWithAllErrors
    89→  map
   101→  andThrough
   117→  andTee
   133→  orTee
   149→  mapErr
   169→  andThen
   190→  orElse
   202→  match
   206→  unwrapOr
   222→  async *safeUnwrap
   227→  then
   249→export function okAsync
   255→export function errAsync
   259→export const fromPromise
   260→export const fromSafePromise
   262→export const fromAsyncThrowable
   265→export type CombineResultAsyncs
   272→export type CombineResultsWithAllErrorsArrayAsync
src/result.ts
    14→export namespace Result
    23→  export function fromThrowable
    43→  export function combine
    55→  export function combineWithAllErrors
    62→export type Result
    66→export function ok
    73→export function err
   122→export function safeTry
   140→  isOk
   147→  isErr
   157→  map
   168→  mapErr
   183→  andThen
   195→  andTee
   207→  orTee
   219→  andThrough
   233→  orElse
   244→  asyncAndThen
   253→  asyncMap
   260→  unwrapOr
   276→  match
   290→  safeUnwrap
   299→  _unsafeUnwrap
   309→  _unsafeUnwrapErr
   312→export class Ok
   313→  constructor
   315→  isOk
   319→  isErr
   323→  map
   328→  mapErr
   337→  andThen
   344→  andThrough
   348→  andTee
   357→  orTee
   366→  orElse
   370→  asyncAndThen
   379→  asyncAndThrough
   383→  asyncMap
   388→  unwrapOr
   393→  match
   397→  safeUnwrap
   405→  _unsafeUnwrap
   409→  _unsafeUnwrapErr
   419→export class Err
   420→  constructor
   422→  isOk
   426→  isErr
   431→  map
   435→  mapErr
   439→  andThrough
   443→  andTee
   447→  orTee
   461→  andThen
   470→  orElse
   475→  asyncAndThen
   479→  asyncAndThrough
   484→  asyncMap
   488→  unwrapOr
   492→  match
   496→  safeUnwrap
   505→  _unsafeUnwrap
   509→  _unsafeUnwrapErr
   523→export const fromThrowable
   614→export type Transpose
   635→export type Combine
   645→export type Dedup
   652→export type MemberListOf
   669→export type EmptyArrayToNever
   685→export type MembersToUnion
   688→export type IsLiteralArray
   712→export type CombineResults
   719→export type CombineResultsWithAllErrorsArray
