tests/snapshots/snapshots__budget_neverthrow_internals_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (2 words)

error.ts
utils.ts
