tests/snapshots/snapshots__budget_neverthrow_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 100 → level 0 (5 words)

_internals/error.ts
_internals/utils.ts
index.ts
result-async.ts
result.ts
