tests/snapshots/snapshots__budget_neverthrow_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 → level 1 (302 words)

_internals/error.ts
     3→export interface ErrorConfig
     7→const defaultErrorConfig
    11→interface NeverThrowError
    27→export const createNeverThrowError
_internals/utils.ts
     5→export type ExtractOkTypes
    10→export type ExtractOkAsyncTypes
    15→export type ExtractErrTypes
    20→export type ExtractErrAsyncTypes
    24→export type InferOkTypes
    25→export type InferErrTypes
    27→export type InferAsyncOkTypes
    28→export type InferAsyncErrTypes
    33→export const combineResultList
    54→export const combineResultAsyncList
    64→export const combineResultListWithAllErrors
    82→export const combineResultAsyncListWithAllErrors
index.ts
result-async.ts
    22→export class ResultAsync
    25→  constructor
    30→  static fromSafePromise
    37→  static fromPromise
    46→  static fromThrowable
    69→  static combine
    81→  static combineWithAllErrors
    89→  map
   101→  andThrough
   117→  andTee
   133→  orTee
   149→  mapErr
   169→  andThen
   190→  orElse
   202→  match
   206→  unwrapOr
   222→  async *safeUnwrap
   227→  then
   249→export function okAsync
   255→export function errAsync
   259→export const fromPromise
   260→export const fromSafePromise
   262→export const fromAsyncThrowable
   265→export type CombineResultAsyncs
   272→export type CombineResultsWithAllErrorsArrayAsync
   279→type UnwrapAsync
   300→type TraverseAsync
   330→type TraverseWithAllErrorsAsync
   338→type Writable
result.ts
    14→export namespace Result
    23→  export function fromThrowable
    43→  export function combine
    55→  export function combineWithAllErrors
    62→export type Result
    66→export function ok
    73→export function err
   122→export function safeTry
   134→interface IResult
   140→  isOk
   147→  isErr
   157→  map
   168→  mapErr
   183→  andThen
   195→  andTee
   207→  orTee
   219→  andThrough
   233→  orElse
   244→  asyncAndThen
   253→  asyncMap
   260→  unwrapOr
   276→  match
   290→  safeUnwrap
   299→  _unsafeUnwrap
   309→  _unsafeUnwrapErr
   312→export class Ok
   313→  constructor
   315→  isOk
   319→  isErr
   323→  map
   328→  mapErr
   337→  andThen
   344→  andThrough
   348→  andTee
   357→  orTee
   366→  orElse
   370→  asyncAndThen
   379→  asyncAndThrough
   383→  asyncMap
   388→  unwrapOr
   393→  match
   397→  safeUnwrap
   405→  _unsafeUnwrap
   409→  _unsafeUnwrapErr
   419→export class Err
   420→  constructor
   422→  isOk
   426→  isErr
   431→  map
   435→  mapErr
   439→  andThrough
   443→  andTee
   447→  orTee
   461→  andThen
   470→  orElse
   475→  asyncAndThen
   479→  asyncAndThrough
   484→  asyncMap
   488→  unwrapOr
   492→  match
   496→  safeUnwrap
   505→  _unsafeUnwrap
   509→  _unsafeUnwrapErr
   523→export const fromThrowable
   530→type Prev
   590→type CollectResults
   614→export type Transpose
   635→export type Combine
   645→export type Dedup
   652→export type MemberListOf
   669→export type EmptyArrayToNever
   680→type UnknownMembersToNever
   685→export type MembersToUnion
   688→export type IsLiteralArray
   698→type Traverse
   704→type TraverseWithAllErrors
   712→export type CombineResults
   719→export type CombineResultsWithAllErrorsArray
