tests/snapshots/snapshots__budget_neverthrow_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 10 → level 0 (9 words)

CHANGELOG.md
README.md
jest.config.js
rollup.config.mjs
src/_internals/error.ts
src/_internals/utils.ts
src/index.ts
src/result-async.ts
src/result.ts
